--- a/index.html
+++ b/index.html
@@ -1,28 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Succinct Chess</title>
-
-  <!-- Chessboard UI stylesheet -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css"
-  />
-
-  <!-- Your custom styles -->
-  <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Succinct Chess</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>Succinct Chess</h1>
-  <div id="board"></div>
-
-  <!-- Chess engine / rules -->
-  <script src="https://cdn.jsdelivr.net/npm/chess.js@0.12.0/chess.min.js"></script>
-  <!-- Chessboard UI library -->
-  <script src="https://cdn.jsdelivr.net/npm/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"></script>
-  <!-- Your game logic -->
-  <script src="js/script.js"></script>
+    <h1>Welcome to Succinct Chess</h1>
+    <script src="js/script.js"></script>
 </body>
 </html>
+
